--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,10 +5,13 @@ html{
 body{
     border: none;
     margin: 0px 0px 0px 0px;
-    
 }
-
-
+canvas[resize] {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+}
 ::-webkit-scrollbar {
     width: 0px;  /* Remove scrollbar space */
     background: transparent;  /* Optional: just make scrollbar invisible */
